--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include *.txt *.ini *.cfg *.rst LICENSE COPYRIGHT
 graft aiopyramid/scaffolds
 graft aiopyramid/gunicorn
+graft aiopyramid/websocket
 
