Add authentication support for coroutines.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
 envlist   = py33,py34
+
 [testenv]
 deps      = 
     pytest
     pytest-pep8
 commands  = py.test --pep8
+
+[pytest]
+pep8ignore =
+    docs/* ALL
