--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist   = py33,py34
+envlist   = py33,py34,py35
 
 [testenv]
-deps      = 
+deps      =
     pytest
     pytest-pep8
 commands  = py.test --pep8
